Standardize all footers to match index.html format
Updated footer sections to have consistent Shop, Company, Legal, and Contact sections:
- terms.html
- privacy.html
- faq.html
- gunsmithing.html
- ffl-transfers.html

All pages now display identical footer structure with:
- Shop section (Ammunition, Magazines, Gun Parts, Gear, Optics, Reloading, Survival, Brands)
- Company section (About Us, Contact, FAQ, Blog)
- Legal section (Terms & Conditions, Privacy Policy, Returns, Order Status)
- Contact section (Phone, Email, Location, Hours)

--- a/faq.html
+++ b/faq.html
@@ -724,29 +724,42 @@
   </script>
 
   <!-- FOOTER -->
-  <footer class="site-footer">
+  <footer>
     <div class="footer-content">
       <div class="footer-section">
-        <h3>About Us</h3>
-        <p>Modular Gunworks LLC - Your trusted source for quality firearms, gunsmithing services, and tactical gear in Huntsville, Alabama.</p>
-      </div>
-      <div class="footer-section">
-        <h3>Quick Links</h3>
+        <h3>Shop</h3>
         <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="shop/ammunition.html">Ammunition</a></li>
+          <li><a href="shop/magazines.html">Magazines</a></li>
+          <li><a href="shop/gun-parts.html">Gun Parts</a></li>
+          <li><a href="shop/gear.html">Gear</a></li>
+          <li><a href="shop/optics.html">Optics</a></li>
+          <li><a href="shop/reloading.html">Reloading</a></li>
+          <li><a href="shop/survival.html">Survival</a></li>
+          <li><a href="shop/brands.html">Brands</a></li>
         </ul>
       </div>
+
+      <div class="footer-section">
+        <h3>Company</h3>
+        <ul>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="blog.html">Blog</a></li>
+        </ul>
+      </div>
+
       <div class="footer-section">
         <h3>Legal</h3>
         <ul>
-          <li><a href="terms.html">Terms of Service</a></li>
+          <li><a href="terms.html">Terms & Conditions</a></li>
           <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="ffl-transfers.html">FFL Information</a></li>
+          <li><a href="returns.html">Returns</a></li>
+          <li><a href="order-status.html">Order Status</a></li>
         </ul>
       </div>
+
       <div class="footer-section">
         <h3>Contact</h3>
         <p><strong>Phone:</strong> (256) 384-3852<br>
@@ -755,9 +768,12 @@
         <strong>Hours:</strong> M-F 9AM-6PM, Sat 10AM-4PM CT</p>
       </div>
     </div>
+
     <div class="footer-bottom">
-      <p>&copy; 2026 Modular Gunworks LLC. All rights reserved. | Veteran Owned & Operated</p>
+      <p>© 2026 Modular Gunworks LLC. All rights reserved. | Veteran-Owned Business in Huntsville, Alabama</p>
+      <p>All firearm sales comply with federal, state, and local laws. FFL required for applicable items.</p>
     </div>
+  </footer>
   <!-- Age Gate Script -->
   <script src="scripts/age-gate.js"></script>
   <!-- Layout Loader -->
