--- a/index.html
+++ b/index.html
@@ -207,7 +207,179 @@
       letter-spacing: 1px;
     }
 
-    /* RESPONSIVE */
+    /* VALUE PROPOSITION BANNER */
+    .value-prop-banner {
+      background: #f5f5f5;
+      padding: 2.5rem 2rem;
+      border-radius: 8px;
+      margin-bottom: 4rem;
+      border-top: 3px solid var(--color-primary);
+    }
+
+    .value-prop-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 2rem;
+    }
+
+    .value-prop-item {
+      text-align: center;
+    }
+
+    .value-icon {
+      font-size: 2.2rem;
+      color: var(--color-primary);
+      margin-bottom: 0.8rem;
+      display: block;
+    }
+
+    .value-prop-item h3 {
+      font-size: 1.1rem;
+      color: var(--color-bg-dark);
+      margin-bottom: 0.5rem;
+      font-weight: 700;
+    }
+
+    .value-prop-item p {
+      color: #666;
+      font-size: 0.9rem;
+      line-height: 1.5;
+    }
+
+    /* TRUST SECTION */
+    .trust-section {
+      margin-bottom: 4rem;
+    }
+
+    .section-subtitle {
+      text-align: center;
+      color: #666;
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+    }
+
+    .trust-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      margin-bottom: 2rem;
+    }
+
+    .trust-card {
+      background: #fff;
+      border: 2px solid #f0f0f0;
+      border-radius: 8px;
+      padding: 2rem;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    .trust-card:hover {
+      border-color: var(--color-primary);
+      box-shadow: 0 6px 20px rgba(178, 34, 34, 0.15);
+      transform: translateY(-4px);
+    }
+
+    .trust-icon {
+      font-size: 2.5rem;
+      color: var(--color-primary);
+      margin-bottom: 1rem;
+    }
+
+    .trust-card h3 {
+      font-size: 1.3rem;
+      color: var(--color-bg-dark);
+      margin-bottom: 0.8rem;
+    }
+
+    .trust-card p {
+      color: #666;
+      line-height: 1.6;
+      font-size: 0.95rem;
+    }
+
+    /* UPCOMING SERVICES */
+    .upcoming-services {
+      margin-bottom: 4rem;
+      background: #f9f9f9;
+      padding: 3rem 2rem;
+      border-radius: 8px;
+    }
+
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+    }
+
+    .service-card {
+      background: #fff;
+      border-left: 4px solid var(--color-primary);
+      padding: 2rem;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .service-card:hover {
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      transform: translateY(-3px);
+    }
+
+    .service-icon {
+      font-size: 2rem;
+      color: var(--color-primary);
+      margin-bottom: 1rem;
+      display: block;
+    }
+
+    .service-card h3 {
+      font-size: 1.3rem;
+      color: var(--color-bg-dark);
+      margin-bottom: 0.8rem;
+    }
+
+    .service-card p {
+      color: #666;
+      line-height: 1.6;
+      margin-bottom: 1.5rem;
+      font-size: 0.95rem;
+    }
+
+    /* ENGAGEMENT SECTION */
+    .engagement-section {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 3rem;
+      margin-bottom: 2rem;
+      padding: 2rem;
+      background: linear-gradient(135deg, var(--color-accent) 0%, rgba(26, 44, 75, 0.8) 100%);
+      border-radius: 8px;
+      color: #fff;
+    }
+
+    .engagement-left h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      font-weight: 700;
+    }
+
+    .engagement-left p {
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+      line-height: 1.6;
+    }
+
+    .engagement-right h3 {
+      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+    }
+
+    .engagement-right p {
+      font-size: 0.95rem;
+      line-height: 1.7;
+    }
+
     @media (max-width: 768px) {
       .carousel-item {
         flex: 0 0 calc(50% - 0.75rem);
@@ -215,6 +387,25 @@
 
       .services-grid {
         grid-template-columns: 1fr;
+      }
+
+      .value-prop-banner {
+        padding: 1.5rem 1rem;
+      }
+
+      .value-prop-grid {
+        gap: 1.5rem;
+      }
+
+      .trust-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1.5rem;
+      }
+
+      .engagement-section {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+        padding: 1.5rem;
       }
     }
 
@@ -229,6 +420,54 @@
 
       main {
         padding: 2rem 1rem;
+      }
+
+      .value-prop-banner {
+        padding: 1.5rem 1rem;
+        margin-bottom: 2rem;
+      }
+
+      .value-prop-grid {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+      }
+
+      .value-icon {
+        font-size: 1.8rem;
+      }
+
+      .trust-grid {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+      }
+
+      .trust-card {
+        padding: 1.5rem;
+      }
+
+      .trust-icon {
+        font-size: 2rem;
+      }
+
+      .upcoming-services {
+        padding: 1.5rem 1rem;
+      }
+
+      .service-card {
+        padding: 1.5rem;
+      }
+
+      .engagement-section {
+        gap: 1rem;
+        padding: 1rem;
+      }
+
+      .engagement-left h2 {
+        font-size: 1.4rem;
+      }
+
+      .engagement-left p {
+        font-size: 0.9rem;
       }
     }
   </style>
@@ -285,7 +524,70 @@
 
   <!-- MAIN CONTENT -->
   <main>
-    <!-- Featured Categories Carousel -->
+    <!-- VALUE PROPOSITION BANNER: Why We're Different -->
+    <section class="value-prop-banner">
+      <div class="value-prop-grid">
+        <div class="value-prop-item">
+          <div class="value-icon"><i class="fas fa-map-marker-alt"></i></div>
+          <h3>Locally Owned</h3>
+          <p>Huntsville-based, personally invested in our community</p>
+        </div>
+        <div class="value-prop-item">
+          <div class="value-icon"><i class="fas fa-tag"></i></div>
+          <h3>Fair Pricing</h3>
+          <p>What you see is what you pay—no hidden fees</p>
+        </div>
+        <div class="value-prop-item">
+          <div class="value-icon"><i class="fas fa-handshake"></i></div>
+          <h3>Real People</h3>
+          <p>No corporate scripts, just honest help</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHY CHOOSE MGW: Trust Builders for New Companies -->
+    <section class="trust-section">
+      <h2 class="section-title">Why Huntsville Chooses Modular Gunworks</h2>
+      <div class="trust-grid">
+        <div class="trust-card">
+          <div class="trust-icon"><i class="fas fa-check-circle"></i></div>
+          <h3>Curated Selection</h3>
+          <p>We stock what we'd recommend to friends and family. No fluff, no second-rate brands. Every product earns its place.</p>
+        </div>
+
+        <div class="trust-card">
+          <div class="trust-icon"><i class="fas fa-headset"></i></div>
+          <h3>Expert Guidance</h3>
+          <p>Get advice from people who actually know firearms. No scripts, no sales pressure. Just real knowledge from the team.</p>
+        </div>
+
+        <div class="trust-card">
+          <div class="trust-icon"><i class="fas fa-map-marker-alt"></i></div>
+          <h3>Local & Accessible</h3>
+          <p>Visit us in Huntsville, or call during business hours. We're here to support you before, during, and after the sale.</p>
+        </div>
+
+        <div class="trust-card">
+          <div class="trust-icon"><i class="fas fa-shield-alt"></i></div>
+          <h3>Quality Guaranteed</h3>
+          <p>Full refunds on defective items. We stand behind everything we sell because our reputation is everything.</p>
+        </div>
+
+        <div class="trust-card">
+          <div class="trust-icon"><i class="fas fa-rocket"></i></div>
+          <h3>Fast Shipping</h3>
+          <p>Order today, shipped tomorrow. We keep stock on hand so you're not waiting around.</p>
+        </div>
+
+        <div class="trust-card">
+          <div class="trust-icon"><i class="fas fa-star"></i></div>
+          <h3>Transparency</h3>
+          <p>We're upfront about inventory, pricing, and shipping. No hidden fees. No surprises.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- FEATURED CATEGORIES CAROUSEL -->
     <section class="carousel-section">
       <h2 class="section-title">Shop by Category</h2>
       
@@ -356,18 +658,45 @@
       </div>
     </section>
 
-    <!-- Services Sections -->
-    <section class="services-grid">
-      <div class="service-card">
-        <h2><i class="fas fa-wrench"></i> Gunsmithing Services</h2>
-        <p>Expert gunsmithing services coming soon. From basic maintenance to custom builds, our skilled gunsmiths will handle your firearm with precision and care.</p>
-        <span class="coming-soon-badge">Coming Soon</span>
+    <!-- UPCOMING SERVICES: Building Anticipation -->
+    <section class="upcoming-services">
+      <h2 class="section-title">Coming Soon: Expanded Services</h2>
+      <p class="section-subtitle">We're building our service offerings to serve you better</p>
+      
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-icon"><i class="fas fa-wrench"></i></div>
+          <h3>Gunsmithing Services</h3>
+          <p>Expert firearm maintenance, repairs, and custom builds. From cleaning and safety checks to custom modifications, our gunsmiths bring precision craftsmanship to every job.</p>
+          <span class="coming-soon-badge">Coming Q2 2026</span>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon"><i class="fas fa-file-contract"></i></div>
+          <h3>FFL Transfer Services</h3>
+          <p>Seamless firearm transfers with full compliance. We handle all federal and state paperwork so you can focus on what matters.</p>
+          <span class="coming-soon-badge">Coming Q2 2026</span>
+        </div>
+      </div>
+    </section>
+
+    <!-- SOCIAL PROOF & ENGAGEMENT -->
+    <section class="engagement-section">
+      <div class="engagement-left">
+        <h2>Ready to Shop?</h2>
+        <p>We're here to help. Visit us in Huntsville, call anytime, or browse online. No pressure, just honest expertise.</p>
+        <a href="contact.html" class="cta-primary">Get in Touch</a>
       </div>
 
-      <div class="service-card">
-        <h2><i class="fas fa-clipboard-list"></i> FFL Transfers</h2>
-        <p>Professional FFL transfer services available. We handle all compliance paperwork with speed and expertise to get your firearms to you legally and safely.</p>
-        <span class="coming-soon-badge">Coming Soon</span>
+      <div class="engagement-right">
+        <h3>Store Hours</h3>
+        <p>Monday - Friday: 9:00 AM - 6:00 PM CT<br>
+           Saturday: 10:00 AM - 4:00 PM CT<br>
+           Sunday: Closed</p>
+        <h3 style="margin-top: 1.5rem;">Contact Us</h3>
+        <p>Phone: <strong>(256) 384-3852</strong><br>
+           Email: <strong>modulargunworks@gmail.com</strong><br>
+           Location: <strong>Huntsville, AL</strong></p>
       </div>
     </section>
   </main>
