--- a/shop/brands.html
+++ b/shop/brands.html
@@ -25,10 +25,10 @@
     #site-header { background: linear-gradient(135deg, rgba(24,26,27,0.15) 0%, rgba(24,26,27,0.05) 100%), url('../images/Header-flagV2.png') center top/cover no-repeat; background-attachment: fixed; color: #fff; padding: 2rem 0 0 0; position: sticky; top: 0; z-index: 100; max-height: 450px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
     .header-top-row { text-align: center; padding: 1.5rem 2rem; display: flex; align-items: center; justify-content: center; position: relative; }
     .header-top-row h1 { font-size: 2rem; font-weight: 900; letter-spacing: 2px; text-shadow: 0 2px 8px rgba(0,0,0,0.5); margin: 0; color: #fff; position: absolute; left: 50%; transform: translateX(-50%); flex: 1; }
-    .header-logo { position: absolute; right: 2rem; margin: 0; cursor: pointer; display: flex; flex-direction: column; align-items: center; transition: transform 0.3s ease; text-decoration: none; gap: 0.3rem; }
+    .header-logo { position: absolute; left: 2rem; margin: 0; cursor: pointer; display: flex; flex-direction: column; align-items: center; transition: transform 0.3s ease; text-decoration: none; gap: 0.3rem; }
     .header-logo:hover { transform: scale(1.08); }
     .logo-label { font-size: 0.7rem; font-weight: 700; letter-spacing: 1px; color: #fff; text-shadow: 0 1px 3px rgba(0,0,0,0.3); }
-    .header-logo img { height: 90px; width: auto; background: rgba(255,255,255,0.98); padding: 6px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.25); border: none; }
+    .header-logo img { height: 70px; width: auto; background: rgba(255,255,255,0.98); padding: 6px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.25); border: none; }
     .header-middle-row { padding: 1.5rem 2rem; display: flex; align-items: center; justify-content: center; gap: 2rem; position: relative; }
     .header-left-links { display: flex; gap: 2rem; align-items: center; position: absolute; right: 2rem; }
     .header-left-links a { color: #fff; text-decoration: none; font-weight: 600; font-size: 0.95rem; transition: color 0.3s; text-shadow: 0 1px 4px rgba(0,0,0,0.3); }
