--- a/shop/sale.html
+++ b/shop/sale.html
@@ -401,7 +401,7 @@
             // Filter for products with sale prices AND are activated
             const saleProducts = data.products.filter(product => {
               const isActive = activeData[product.id] && activeData[product.id].page === category;
-              const regularPrice = product.customPrice || product.retailPrice || parseFloat(product.price) || 0;
+              const regularPrice = product.retailPrice || product.salePrice || 0;
               const salePrice = product.salePrice || 0;
               return isActive && salePrice > 0 && salePrice < regularPrice;
             });
@@ -410,7 +410,7 @@
             saleProducts.forEach(product => {
               product.category = category;
               product.categoryDisplay = category.split('-').map(w => w.charAt(0).toUpperCase() + w.slice(1)).join(' ');
-              product.regularPrice = product.customPrice || product.retailPrice || parseFloat(product.price) || 0;
+              product.regularPrice = product.retailPrice || product.salePrice || 0;
               product.discount = Math.round(((product.regularPrice - product.salePrice) / product.regularPrice) * 100);
             });
             
