Add accessibility improvements to reloading.html
- Add title attribute to search button for screen readers
- Add title attribute to sort filter select for accessibility
- Add media attribute to theme-color meta tag for browser compatibility

Fixes 2 of 3 remaining linting warnings (search button and select accessibility)

--- a/shop/reloading.html
+++ b/shop/reloading.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Shop reloading supplies at Modular Gunworks LLC - presses, dies, powder, primers.">
   <meta name="keywords" content="reloading, presses, dies, powder, primers">
   <meta name="author" content="Modular Gunworks LLC">
-  <meta name="theme-color" content="#181a1b">
+  <meta name="theme-color" content="#181a1b" media="(prefers-color-scheme: dark)">
   
   <title>Reloading - Modular Gunworks LLC</title>
   
@@ -322,7 +322,7 @@
 
       <form class="search-bar" action="#" method="get">
         <input type="text" placeholder="Search ammo, gear, optics...">
-        <button type="submit"><i class="fas fa-search"></i></button>
+        <button type="submit" title="Search"><i class="fas fa-search"></i></button>
       </form>
     </div>
 
@@ -436,7 +436,7 @@
           <i class="fas fa-chevron-down"></i>
         </button>
         <div class="filter-content">
-          <select id="sort-filter">
+          <select id="sort-filter" title="Sort products by">
             <option value="newest">Newest First</option>
             <option value="price-low">Price: Low to High</option>
             <option value="price-high">Price: High to Low</option>
