Fix all remaining issues: accessibility, browser compat, and CSS cleanup
- services.html: Add media attribute to theme-color, add title to search button
- about.html: Create about.css, move 9 inline styles to external stylesheet
- shop/ammunition.html: Create ammunition.css, move 40+ inline styles to external stylesheet
  - Add media attribute to theme-color
  - Add title attributes for search button and sort select
  - All page functionality and appearance maintained

Total: Removed 50+ inline CSS style violations and fixed accessibility issues

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/components.css">
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/age-gate.css">
+  <link rel="stylesheet" href="styles/about.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     main { max-width: 1200px; margin: 0 auto; padding: 3rem 2rem; }
@@ -68,14 +69,14 @@
     <h1 class="page-title">About Modular Gunworks LLC</h1>
 
   <!-- CONTENT -->
-  <div style="max-width: 1000px; margin: 40px auto; padding: 0 20px;">
-    <h2 style="color: var(--primary-color); margin-bottom: 20px;">Our Story</h2>
-    <p style="line-height: 1.8; margin-bottom: 20px;">Modular Gunworks LLC was founded on the principles of quality, integrity, and service. As a veteran-owned business, we bring a commitment to excellence and understanding of firearm enthusiasts to everything we do.</p>
+  <div class="about-content">
+    <h2 class="about-section-title">Our Story</h2>
+    <p class="about-paragraph">Modular Gunworks LLC was founded on the principles of quality, integrity, and service. As a veteran-owned business, we bring a commitment to excellence and understanding of firearm enthusiasts to everything we do.</p>
     
-    <p style="line-height: 1.8; margin-bottom: 20px;">We believe in providing customers with the highest quality firearms, ammunition, tactical gear, and professional services. Whether you're a competitive shooter, hunter, or firearms enthusiast, we're here to support your needs with expert knowledge and competitive pricing.</p>
+    <p class="about-paragraph">We believe in providing customers with the highest quality firearms, ammunition, tactical gear, and professional services. Whether you're a competitive shooter, hunter, or firearms enthusiast, we're here to support your needs with expert knowledge and competitive pricing.</p>
 
-    <h3 style="color: var(--primary-color); margin-top: 30px; margin-bottom: 15px;">Why Choose Us?</h3>
-    <ul style="margin-left: 20px; color: var(--light-text); line-height: 1.8;">
+    <h3 class="about-section-heading">Why Choose Us?</h3>
+    <ul class="about-list">
       <li>Veteran-owned and operated</li>
       <li>Extensive selection of quality firearms and gear</li>
       <li>Professional gunsmithing services</li>
@@ -85,8 +86,8 @@
       <li>Commitment to compliance and safety</li>
     </ul>
 
-    <h3 style="color: var(--primary-color); margin-top: 30px; margin-bottom: 15px;">Our Commitment</h3>
-    <p style="line-height: 1.8;">We are committed to serving our customers with integrity, providing quality products, and maintaining the highest standards of firearm safety and legal compliance. Your satisfaction is our priority.</p>
+    <h3 class="about-section-heading">Our Commitment</h3>
+    <p class="about-paragraph">We are committed to serving our customers with integrity, providing quality products, and maintaining the highest standards of firearm safety and legal compliance. Your satisfaction is our priority.</p>
   </div>
 
   </main>
