--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Professional gunsmithing, FFL transfers, maintenance, and optics installation services at Modular Gunworks LLC in Huntsville, Alabama.">
   <meta name="keywords" content="gunsmithing, FFL transfer, maintenance, repair, optics installation">
   <meta name="author" content="Modular Gunworks LLC">
-  <meta name="theme-color" content="#181a1b">
+  <meta name="theme-color" content="#181a1b" media="(prefers-color-scheme: dark)">
   
   <title>Services - Modular Gunworks LLC</title>
   
@@ -151,7 +151,7 @@
 
       <form class="search-bar" action="#" method="get">
         <input type="text" placeholder="Search ammo, gear, optics...">
-        <button type="submit"><i class="fas fa-search"></i></button>
+        <button type="submit" title="Search"><i class="fas fa-search"></i></button>
       </form>
     </div>
 
