--- a/shop/survival.html
+++ b/shop/survival.html
@@ -47,7 +47,7 @@
 
       <form class="search-bar" action="#" method="get">
         <input type="text" placeholder="Search ammo, gear, optics...">
-        <button type="submit"><i class="fas fa-search"></i></button>
+        <button type="submit" title="Search"><i class="fas fa-search"></i></button>
       </form>
     </div>
 
@@ -104,7 +104,7 @@
           <i class="fas fa-chevron-down"></i>
         </button>
         <div class="filter-content">
-          <div style="display: flex; gap: 0.4rem;">
+          <div class="price-flex">
             <input type="number" id="price-min" placeholder="$0" min="0">
             <input type="number" id="price-max" placeholder="$999" min="0">
           </div>
@@ -161,7 +161,7 @@
           <i class="fas fa-chevron-down"></i>
         </button>
         <div class="filter-content">
-          <select id="sort-filter">
+          <select id="sort-filter" title="Sort products">
             <option value="newest">Newest First</option>
             <option value="price-low">Price: Low to High</option>
             <option value="price-high">Price: High to Low</option>
@@ -196,8 +196,8 @@
 
       <!-- GRID VIEW (Default) -->
       <div id="grid-view" class="products-grid">
-        <div style="grid-column: 1 / -1; text-align: center; padding: 2rem;">
-          <i class="fas fa-spinner fa-spin" style="font-size: 2rem; color: var(--color-primary);"></i> Loading products...
+        <div class="loading">
+          <i class="fas fa-spinner fa-spin"></i> Loading products...
         </div>
       </div>
 
@@ -215,7 +215,7 @@
           </thead>
           <tbody id="list-body">
             <tr>
-              <td colspan="5" style="padding: 2rem; text-align: center; color: #999;">Loading products...</td>
+              <td colspan="5" class="empty">Loading products...</td>
             </tr>
           </tbody>
         </table>
