--- a/shop/gear.html
+++ b/shop/gear.html
@@ -38,7 +38,7 @@
       </div>
       <form class="search-bar" action="#" method="get">
         <input type="text" placeholder="Search ammo, gear, optics...">
-        <button type="submit"><i class="fas fa-search"></i></button>
+        <button type="submit" title="Search"><i class="fas fa-search"></i></button>
       </form>
     </div>
     <nav class="category-nav">
@@ -150,7 +150,7 @@
           <i class="fas fa-chevron-down"></i>
         </button>
         <div class="filter-content">
-          <select id="sort-filter" class="sort-select">
+          <select id="sort-filter" class="sort-select" title="Sort products by">
             <option value="newest">Newest First</option>
             <option value="price-low">Price: Low to High</option>
             <option value="price-high">Price: High to Low</option>
