--- a/shop/magazines.html
+++ b/shop/magazines.html
@@ -43,7 +43,7 @@
 
       <form class="search-bar" action="#" method="get">
         <input type="text" placeholder="Search ammo, gear, optics...">
-        <button type="submit"><i class="fas fa-search"></i></button>
+        <button type="submit" title="Search"><i class="fas fa-search"></i></button>
       </form>
     </div>
 
@@ -171,7 +171,7 @@
           <i class="fas fa-chevron-down"></i>
         </button>
         <div class="filter-content">
-          <select id="sort-filter">
+          <select id="sort-filter" title="Sort products by">
             <option value="newest">Newest First</option>
             <option value="price-low">Price: Low to High</option>
             <option value="price-high">Price: High to Low</option>
