--- a/shop/optics.html
+++ b/shop/optics.html
@@ -58,7 +58,7 @@
 
       <form class="search-bar" action="#" method="get">
         <input type="text" placeholder="Search ammo, gear, optics...">
-        <button type="submit"><i class="fas fa-search"></i></button>
+        <button type="submit" title="Search"><i class="fas fa-search"></i></button>
       </form>
     </div>
 
